--- a/langs/en.json
+++ b/langs/en.json
@@ -1,5 +1,5 @@
 {
     "welcome": "<u>Welcome to AnonFunder!</u>\n\nTo find out more, click here -> /help",
     "unknown": "This commane doesn't exist.\n\nTo see available commands, please click /help or / button in the bottom right corner of your Telegram window.",
-    "status": "⭕️  <strong><u>Your AnonFunder Status</u></strong>\n\n<strong>Address:</strong> %s\n<strong>AINT Amount:</strong>     <u>%.8f</u> AINT\n<strong>WAVES Amount:</strong> <u>%.8f</u> WAVES\n<strong>BTC Amount:</strong>       <u>%.8f</u> BTC\n<strong>ETH Amount:</strong>       <u>%.8f</u> ETH"
+    "status": "⭕️  <strong><u>Your AnonFunder Status</u></strong>\n\n<strong>Address:</strong> %s\n<strong>AINT Amount:</strong>     <u>%.8f</u> AINT\n<strong>WAVES Amount:</strong> <u>%.8f</u> WAVES"
 }
