--- a/langs/hr.json
+++ b/langs/hr.json
@@ -2,6 +2,6 @@
     "welcome": "<u>Welcome to AnonFunder!</u>\n\nTo find out more, click here -> /help",
     "unknown": "This command doesn't exist.\n\nTo see available commands, please click /help or / button in the bottom right corner of your Telegram window.",
     "status": "⭕️  <strong><u>Your AnonFunder Status</u></strong>\n\n<strong>Address:</strong> %s\n<strong>AINT Amount:</strong>     <u>%.8f</u> AINT\n<strong>WAVES Amount:</strong> <u>%.8f</u> WAVES",
-    "purchase": "We just had a new AINT purchase: %.8f WAVES (%.2f €) 🚀",
-    "purchaseHrk": "We just had a new AINT purchase: %.2f AHRK 🚀"
+    "purchase": "Imamo novu kupnju AINT tokena: %.8f WAVES (%.2f €) 🚀",
+    "purchaseAhrk": "Imamo novu kupnju AINT tokena: %.2f AHRK 🚀"
 }
