--- a/langs/en.json
+++ b/langs/en.json
@@ -3,5 +3,6 @@
     "unknown": "This command doesn't exist.\n\nTo see available commands, please click /help or / button in the bottom right corner of your Telegram window.",
     "status": "⭕️  <strong><u>Your AnonFunder Status</u></strong>\n\n<strong>Address:</strong> %s\n<strong>AINT Amount:</strong>     <u>%.8f</u> AINT\n<strong>WAVES Amount:</strong> <u>%.8f</u> WAVES",
     "purchase": "We just had a new AINT purchase: %.8f WAVES (%.2f €) 🚀",
-    "purchaseHrk": "We just had a new AINT purchase: %.2f AHRK 🚀"
+    "purchaseHrk": "We just had a new AINT purchase: %.2f AHRK 🚀",
+    "newAintPrice": "The price of AINT token grew to: %.2f €."
 }
